# gmock-sfinae-concepts-calculator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  NOTES.md  README.md  conanfile.py
cmake/: conan-preconfigure.cmake
include/conceptlib/: calculator.h
include/inheritlib/: calculator.h
include/sfinaelib/: calculator.h
src/: CMakeLists.txt  main.cpp
src/conceptlib/: calculator.cpp
src/inheritlib/: calculator.cpp  calculator.h
src/mylib/: calculator.cpp  calculator.h
src/sfinaelib/: calculator.cpp
src/templatelib/: calculator.cpp  calculator.h
src/templib/: calculator.cpp  calculator.h
test/: CMakeLists.txt  concept_mock_calculator.h  inherit_mock_calculator.h  sfinae_mock_calculator.h  template_mock_calculator.h  test_calc.cpp  test_concept_calculator.cpp  test_inherit_calculator.cpp  test_sfinae_calculator.cpp  test_template_calculator.cpp
